force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the customer completed the survey</inlineHelpText>
    <label>Feedback Date</label>
    <type>Date</type>
</CustomField>