force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Link__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback Link</label>
    <type>Url</type>
</CustomField>