force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch Survey</fullName>
            </value>
            <value>
                <fullName>Digital Survey</fullName>
            </value>
            <value>
                <fullName>Call Center Survey</fullName>
            </value>
            <value>
                <fullName>Collections Survey</fullName>
            </value>
            <value>
                <fullName>Fraud Survey</fullName>
            </value>
            <value>
                <fullName>Mortgage Survey</fullName>
            </value>
            <value>
                <fullName>Welcome Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>