force-app/main/default/objects/Customer_Feedback__c/fields/Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Response_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>